<resources>
    <string name="app_name">ShoppingListApp</string>
    <string name="enter_name">Enter your name</string>
    <string name="welcome_button_text">Next</string>
    <string name="empty_username_input">Please enter your name</string>
    <string name="floating_action_button">Add</string>
    <string name="alert_dialog_title">Add new product</string>
    <string name="alert_dialog_name_text">Name:</string>
    <string name="alert_dialog_amount_text">Amount:</string>
    <string name="alert_dialog_category_text">Category:</string>
    <string name="alert_dialog_noCategory_text">* if not chosen product will be seen in general category</string>
    <string name="greeting">Hello,</string>
    <string name="inputEmpty">Please fill in all fields!</string>
    <string name="successfully_added_product">Product added!</string>
    <string name="server_error">Server Error</string>
    <string name="delete_list_empty">No checked items</string>
    <string name="delete_list_successful">Items deleted</string>


</resources>
