...
                    tint = ObjectColor,
                    modifier = Modifier.size(50.dp)
                )
                Spacer(modifier = Modifier.width(spacing.spacingMedium))
                TextField(
                    modifier = Modifier.semantics {
                        contentDescription = "input_username"
                    },
                    value = viewModel.name.value,
                    onValueChange = {
                        viewModel.onAddName(it)
                    },
                    singleLine = true,
...
